# SentientExchange

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .env.staging.example  .eslintrc.js  .gitignore  .lintstagedrc.json  .prettierignore  .railwayignore  AI_CHAT_IMPLEMENTATION_PLAN.md  API.md  ARCHITECTURE.md  AgentMarket_Complete_Project_Plan.md  BRAND_ASSETS_README.md  BRAND_GUIDE.md  BRAND_QUICK_REFERENCE.md  BUILD_STATUS.md  CATCH_BLOCK_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  DEMO_READY.md  DEMO_SCRIPT.md  Dockerfile  HACKATHON_READINESS_AUDIT.md  HACKATHON_SLIDES_TEMPLATE.md  IMPLEMENTATION_STATUS.md  LAUNCH.md  LICENSE  MARKETING_CHECKLIST.md  MIGRATION_STDIO_TO_SSE.md  MULTI_CHAIN_IMPLEMENTATION.md  PHASE7_TEST_STATUS.md  PRODUCTION_READY.md  PROGRESS_SUMMARY.md  QUALITY_IMPROVEMENT_PROGRESS.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  (+30 more)
.claude/: settings.local.json
.github/: CICD_WORKFLOW.md  CODEOWNERS  GITHUB_SETUP.md  WORKFLOWS.md  dependabot.yml
docker/: docker-compose.yml  mcp-server.Dockerfile
docs/: API.md  ARCHITECTURE.md  AUTH_TEST_COVERAGE.md  DEPLOYMENT.md  DEVELOPMENT.md  E2E_TESTING.md  TRUE_E2E_SUMMARY.md
permit-service/: .dockerignore  .env.example  .gitignore  AI_Permit_Tampa_Build_Plan.md  CREATIVE_MEMORABLE_NAMES.md  Contractor_Website_Build_Plan.md  DUAL_DOMAIN_NAMES.md  Dockerfile  NAMING_BRAINSTORM.md  README.md  ROADMAP.md  SECURITY.md  TIER2_E2E_TEST.md  UNIQUE_NAMES.md  docker-compose.yml  (+1 more)
programs/session-wallet/: Cargo.toml
programs/session-wallet/src/: lib.rs
(+945 files in other folders)
