[package]
name = "session-wallet"
version = "0.1.0"
description = "Session wallet program for AgentMarket chat"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "session_wallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
